# BOS

./: .gitignore  CMakeLists.txt
cmake/: copy_files.cmake  declare_config.cmake  win32-vs2012.cmake
include/: BOS.hpp
include/ImageHandling/: BitmapImage.hpp  Coordinate.hpp  ImageData.hpp  Pixel.hpp
include/ImageProcessing/: ColorBox.hpp  Schlieren.hpp
include/Utilities/: BOSException.hpp  ProgressIndicator.hpp
include/globals/: shared_ptr.hpp
include/msvc/: _stdint.h
src/: CMakeLists.txt
src/ImageHandling/: BitmapImage.cpp  CMakeLists.txt  ImageData.cpp
src/ImageProcessing/: CMakeLists.txt  ColorBox.cpp  Schlieren.cpp
src/Utilities/: BOSException.cpp  CMakeLists.txt  ProgressIndicator.cpp
test/: CMakeLists.txt
test/Test_BMPHandling/: CMakeLists.txt  Test_BMPHandling.cpp
test/Test_ColorBox/: CMakeLists.txt  Test_ColorBox.cpp
test/Test_Runner/: CMakeLists.txt  Test_Runner.cpp
test/Test_SchlierenProcessing/: CMakeLists.txt  Test_SchlierenProcessing.cpp
